use generics to simplify code